[iOS] Books ASSERTs upon opening a book with a debug build of WebKit https://bugs.webkit.org/show_bug.cgi?id=237445 <rdar://problem/89776531>

Reviewed by Alex Christensen.

Source/WebCore:

* platform/sql/SQLiteDatabase.cpp:
(WebCore::SQLiteDatabase::open):

Source/WebKit:

* NetworkProcess/cache/NetworkCacheBlobStorage.cpp:
(WebKit::NetworkCache::BlobStorage::add):
* UIProcess/API/APIContentRuleListStore.cpp:
(API::openAndMapContentRuleList):
(API::compiledToFile):

Source/WTF:

makeSafeToUseMemoryMapForPath() runs an ASSERT() that it was successful.
However, it's not always successful, so this ASSERT() was getting hit when
trying to open a book in Books. So, this patch makes the function return a
bool to indicate success, and updates callers to do something sensible if
it failed.

Test: FileSystemTest.makeSafeToUseMemoryMapForPath

* wtf/FileSystem.cpp:
(WTF::FileSystemImpl::makeSafeToUseMemoryMapForPath):
(WTF::FileSystemImpl::mapToFile):
* wtf/FileSystem.h:
* wtf/cocoa/FileSystemCocoa.mm:
(WTF::FileSystemImpl::makeSafeToUseMemoryMapForPath):

Tools:

* TestWebKitAPI/Tests/WTF/FileSystem.cpp:
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/248083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290850 268f45cc-cd09-0410-ab3c-d52691b4dbfc