Source/WebKit/UIProcess/API/APIContentRuleListStore.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -229,7 +229,8 @@ struct MappedData {
 
 static std::optional<MappedData> openAndMapContentRuleList(const WTF::String& path)
 {
-    FileSystem::makeSafeToUseMemoryMapForPath(path);
+    if (!FileSystem::makeSafeToUseMemoryMapForPath(path))
+        return std::nullopt;
     WebKit::NetworkCache::Data fileData = mapFile(fileSystemRepresentation(path).data());
     if (fileData.isNull())
         return std::nullopt;
@@ -408,7 +409,8 @@ static Expected<MappedData, std::error_code> compiledToFile(WTF::String&& json, 
         return makeUnexpected(ContentRuleListStore::Error::CompileFailed);
     }
     
-    FileSystem::makeSafeToUseMemoryMapForPath(finalFilePath);
+    if (!FileSystem::makeSafeToUseMemoryMapForPath(finalFilePath))
+        return makeUnexpected(ContentRuleListStore::Error::CompileFailed);
     
     return {{ WTFMove(metaData), WTFMove(mappedData) }};
 }
