Tools/TestWebKitAPI/Tests/WTF/FileSystem.cpp
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2015 Canon Inc. All rights reserved.
- * Copyright (C) 2017 Apple Inc. All rights reserved.
+ * Copyright (C) 2017-2022 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -830,6 +830,18 @@ TEST_F(FileSystemTest, readEntireFile)
     EXPECT_TRUE(buffer);
     auto contents = String::adopt(WTFMove(buffer.value()));
     EXPECT_STREQ(contents.utf8().data(), FileSystemTestData);
+}
+
+TEST_F(FileSystemTest, makeSafeToUseMemoryMapForPath)
+{
+    EXPECT_TRUE(FileSystem::makeSafeToUseMemoryMapForPath(tempFilePath()));
+    auto result = FileSystem::makeSafeToUseMemoryMapForPath(String("Thisisnotarealfile", String::ConstructFromLiteral));
+#if PLATFORM(IOS_FAMILY) && !PLATFORM(IOS_FAMILY_SIMULATOR)
+    // NSFileProtectionKey only actually means anything on-device.
+    EXPECT_FALSE(result);
+#else
+    EXPECT_TRUE(result);
+#endif
 }
 
 } // namespace TestWebKitAPI
